# PAKE_SYSTEM_claude_optimized

./: .cursorrules  .env.example  .env.template  .flake8  .gitignore  .gitmessage  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  .secretsignore  .trufflehog-ignore  .trufflehogignore  2025-09-12-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-21-project-is-vailing-to-deploy-on-vercel-httpsve.txt  ARCHITECTURAL_REFACTORING_PLAYBOOK.md  ARCHITECTURAL_REFINEMENT_SRP_IMPLEMENTATION.md  BLACK_SETUP_SUMMARY.md  BUSINESS_CASE_ARCHITECTURAL_REFACTORING.md  CHANGELOG.md  CICD_FIXES_SUMMARY.md  CICD_IMPLEMENTATION_SUMMARY.md  CICD_PIPELINE_FIXES_SUMMARY.md  CLAUDE.md  CODE_HYGIENE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  CURATION_SYSTEM_README.md  CURRENT_SYSTEM_STATUS.md  CURSOR_HANDOFF.md  CURSOR_IDE_HANDOFF_CONTEXT.md  CURSOR_IDE_TRANSITION.md  DASHBOARD_DEPLOYMENT_GUIDE.md  DEPENDENCY_AUDIT_COMPLETE.md  DEPLOYMENT_HARDENING_SUMMARY.md  DEVELOPMENT_ENVIRONMENT_SETUP_COMPLETE.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.ai-security  Dockerfile.bridge  (+121 more)
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
adrs/: 001-api-gateway-selection.md  002-service-mesh-selection.md  003-database-selection.md  004-monorepo-strategy.md
agent_prompts/: governance_workflows.md  ingestion_agent.md  synthesis_agent.md
auth-middleware/: README.md  auth_middleware.py  requirements.txt
config/: claude_gemini_tools.json  config.json  free-production-deployment.md  ingestion.json  production-deployment.md  requirements-ai-security.txt  requirements-async-tasks.txt  requirements-dev.txt  requirements.txt  secrets_manager.py  service_config.py  vault_client.py
configs/: __init__.py  requirements.txt  service_config.py
dashboard/: README.md  curation-dashboard.html  deploy.sh  env.example  index.html  modern-dashboard.html  next.config.js  package.json  vercel.json
data/: AIMemoryQueryInterface.py  DataAccessLayer.py  VectorMemoryDatabase.py  automation_test_results.json  demo_vector_memory.py  knowledge_graph.json  processing_state.json  simple_automation_state.json
deploy/: MIGRATION.md  README.md
deployment/: __init__.py  enterprise_deployment.py
docker/: DOCKER-AI-SECURITY-INTEGRATION.md  docker-compose-enhanced.yml  docker-compose.yml  init-db.sql  monitoring-stack.yml  nginx.conf
docs/: AI-SECURITY-README.md  API_REFERENCE.md  AWS_OIDC_SETUP.md  CHANGELOG-AI-SECURITY.md  CICD_PIPELINE.md  CI_PIPELINE_GUIDE.md  CLAUDE.md  CLAUDE_CODE_WELCOME.md  COMPLETE_AUTOMATION_GUIDE.md  CONTRIBUTING.md  COSMIC_CALIBRATION_PHASE_1_COMPLETE.md  CURSOR_MIGRATION.md  CURSOR_SETUP.md  DAY_11_COMPLETION_SUMMARY.md  DAY_13_COMPLETION_SUMMARY.md  DEPLOYMENT_COMPLETION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SECURITY.md  DEPLOYMENT_SUCCESS_SUMMARY.md  ENHANCED_MCP_IMPLEMENTATION_GUIDE.md  ENTERPRISE_LOGGING_MONITORING_GUIDE.md  GEMINI_CLI_SETUP_INSTRUCTIONS.md  GEMINI_PAKE_INTEGRATION_COMPLETE.md  GIT-CHANGESET-AI-SECURITY.md  GIT_REMOTE_SETUP.md  INSTALLATION.md  KNOWLEDGE_VAULT_INTEGRATION_COMPLETE.md  LOCAL_VALIDATION.md  LOGGING_MONITORING_IMPLEMENTATION_SUMMARY.md  MAINTENANCE_OPERATIONS_GUIDE.md  MCP_INTEGRATION_COMPLETE.md  PHASE_12B_ENHANCED_VISUALIZATION_COMPLETE.md  PHASE_1_FOUNDATION_HARDENING_PLAN.md  PHASE_1_QUICK_START.md  PHASE_1_SECURITY_COMPLETION_REPORT.md  PHASE_2B_INSTRUCTIONS.md  PHASE_2B_ROADMAP.md  PHASE_2_CONTINUATION_PLAN.md  PHASE_2_FOUNDATION_INTEGRATION_COMPLETION.md  PHASE_2_PERFORMANCE_STANDARDIZATION_COMPLETION.md  (+34 more)
elk-config/: ELK-INTEGRATION-DOCUMENTATION.md  elasticsearch.yml  kibana.yml  logstash.conf
frontend/: .env.example  .gitignore  .vercelignore  Dockerfile  Dockerfile.dev  README.md  UI_UX_COMPLETION_REPORT.md  VERCEL_DEPLOYMENT.md  cypress.config.ts  dependency-analysis.json  jest.config.js  jest.setup.js  next.config.js  package.json  vercel.json
k8s/: deploy-secure.sh  deploy.sh  external-secrets-operator.yaml  monitoring.yaml  redis-deployment.yaml  security-policies.yaml  validate-security.sh  vault-deployment.yaml
kubernetes/: README.md
mcp-env/: main.py  pyproject.toml
mcp-servers/: pake_mcp_server.py
monitoring/: docker-compose.monitoring.yml  health_monitoring.py  logging_framework.py  prometheus.yml
pake-web-app/: README.md  deploy.sh  index.py  package.json  requirements.txt  vercel.json
performance_tests/: database_profiler.py  environment_manager.py  locustfile.py  memory_profiler.py  performance_monitor.py
scripts/: .env.example  DR-SMOKE-TEST-USAGE.md  README-DR-Smoke-Test.md  ab_testing_framework.py  analytics_engine.py  analytics_master.py  auto_update_system.py  automated_vault_watcher.py  check_hardcoded_secrets.py  clean_git_history.py  code_style_enforcement_summary.md  comprehensive_system_test.py  comprehensive_test_runner.py  content_optimization_engine.py  coverage_reporter.py  deploy_advanced_services.py  deploy_curation_system.py  deploy_pake.py  dr-smoke-test-native.ps1  dr-smoke-test-simple.ps1  dr-smoke-test-working.ps1  dr-smoke-test.ps1  dr-smoke-test.sh  dr-test.ps1  enhanced_service_manager.py  final_deployment_demo.py  fix_cicd_issues.py  fix_linting_issues.py  fix_npm_audits.sh  formatter_setup_summary.md  generate_deployment_report.py  github_setup.sh  ingestion_manager.py  ingestion_pipeline.py  instagram_enhanced.py  install-hooks-simple.py  install-hooks.py  legacy_cleanup_summary.md  legacy_code_removal_plan.md  lightweight_curation_api.py  (+84 more)
security/: secrets_manager.py  security_hardening_framework.py  security_monitoring.py
security-dashboard/: SECURITY-DASHBOARD-DOCUMENTATION.md  index.html
service/: ensure_running.bat  pake_service.py  watchdog_service.bat
src/: ai-security-monitor.py  cosmic_calibration_demo.py  cosmic_calibration_demo_simple.py  cosmic_demo.py  pake.py  run_simple_automation.py  service_mesh.ts  start_service_mesh.ts  test_results.json
tests/: TESTING_DOCUMENTATION.md  __init__.py  conftest.py  conftest_auth.py  factories.py  test_adaptive_learning_engine.py  test_auth_system.py  (+46 more)
(+874 files in other folders)
